アカウント復活でユーザーをh_userから復元してトークン発行するよう変更
