# shared/api/v1/openapi.yaml
@@ -1351,7 +1351,11 @@ paths:
                   is_in_watch_later:
                     type: boolean
                     description: あとで見るプレイリストに入っているかどうか
-                required: [ video_id, external_video_id, external_video_title, external_video_description, external_video_thumbnail_url, external_video_created_at, channel_id, external_channel_display_name, channel_custom_id, external_channel_subscribers_count, external_channel_icon_url, is_watched, is_in_watch_later ]
+                  last_watch_seconds:
+                    type: integer
+                    minimum: 0
+                    description: 最後に視聴した位置（秒数）。未視聴の場合は0
+                required: [ video_id, external_video_id, external_video_title, external_video_description, external_video_thumbnail_url, external_video_created_at, channel_id, external_channel_display_name, channel_custom_id, external_channel_subscribers_count, external_channel_icon_url, is_watched, is_in_watch_later, last_watch_seconds ]
         "400":
           $ref: "#/components/responses/BadRequest"
         "401":
